--- a/style.css
+++ b/style.css
@@ -102,6 +102,7 @@ footer {
         text-align: end;
 
         h3 {
+            text-align: center;
             margin-bottom: 1rem;
         }
 
