--- a/style.css
+++ b/style.css
@@ -26,18 +26,26 @@ main {
     justify-content: space-between !important;
     flex-direction: column;
     height: 100vh;
-    
 }
-footer {
-        margin-bottom: 1rem;
-    }
+
+.increment-btn {
+    border: 2px solid #000;
+    border-radius: 50%;
+    width: 60px;
+    height: 60px;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+}
+
+footer { margin-bottom: 1rem; }
 .container {
     display: flex;
     align-items: center;
     justify-content: center;
     flex-direction: column;
     width: 90%;
-    background-color: #222;
+    background-color: #1b1b20;
     border-radius: 5px;
 
     nav {
@@ -74,9 +82,13 @@ footer {
     }
 
     p {
-
         text-align: center;
-        margin: 2rem 3rem;
+        margin: 1rem;
+        font-size: 12px;
+    }
+
+    hr {
+        border: 1px solid rgb(254, 98, 39, 255);
     }
 
     h1 {
@@ -89,7 +101,7 @@ footer {
         justify-content: center;
         flex-direction: column;
         gap: 1rem;
-        margin-top: 3rem;
+        margin-top: 1rem;
         margin-bottom: 3rem;
     }
 
@@ -97,9 +109,16 @@ footer {
 
         padding: 1rem 1.5rem;
         border-radius: 5px;
-        border: 1px solid rgb(218, 218, 218);
+        border: 1px solid rgb(254, 98, 39, 255);
         width: 85%;
         text-align: end;
+        box-shadow: 0 0 10px rgba(0, 0, 0, 0.1);
+        cursor: pointer;
+        transition: transform 0.3s;
+
+        &:hover {
+            transform: scale(1.02);
+        }
 
         h3 {
             text-align: center;
@@ -109,6 +128,7 @@ footer {
         p {
             opacity: .7;
             margin-bottom: 1rem;
+            margin: 1rem 0; 
         }
 
         span {
@@ -123,17 +143,12 @@ footer {
 
         button {
             display: block;
+            text-align: center;
             margin: auto;
             margin-top: 1.5rem;
-            border: 1px solid rgb(109, 109, 109);
-            border-radius: 5px;
-            padding: 7px 6rem;
+            border: 2px solid rgb(109, 109, 109);
+            border-radius: 50%;
             transition: .2s ease;
-        }
-
-        button:hover {
-            border: 1px solid rgb(75, 75, 75);
-            transform: scale(.98);
         }
     }
 }
@@ -161,12 +176,8 @@ footer {
             .card {
                 width: 90%;
                 span {
-                    padding: 5px 1rem;
+                    padding: 5px 3rem;
                     margin-left: .5rem;
-                }
-
-                button {
-                    padding: 7px 3rem;
                 }
             }
         }
